# GuardianoftheWild

./: .gitignore  README.md
commands/cmd/: arg1
js/: README.md  auth.json  emotes.json  index.js  package.json  popen.node  update.sh
js/commands/: main.js
js/commands/cmd/: rstest
js/commands/processing/: arg1.cpp
rs/: Cargo.toml  README.md
rs/src/: bot.rs  irc.rs  lib.rs  main.rs  user.rs
rs/src/gotw/: bot.rs  command.rs  commands.rs  format.rs  irc.rs  lib.rs  user.rs
rs/src/gotw/command/: command_map.rs  commands.rs
