[package]
name = "guardianofthewild"
version = "0.1.0"
edition = "2018"

[lib]
name = "gotw"
path = "src/gotw/lib.rs"

[[bin]]
name = "guardianofthewild"
path = "src/main.rs"

[dependencies.tokio]
version = "1"
features = ["rt", "macros", "net", "io-util"]

[dependencies.tungstenite]
version = "0.15"

[dependencies.url]
version = "2"

[dependencies.env_logger]
version = "0.9"

[dependencies.log]
version = "0.4"
features = ["std"]
